# NetChess

./: .gitignore  CMakeLists.txt  README.md
include/: bishop.hpp  board.hpp  chess.hpp  color.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  square.hpp  tracked_piece.hpp  utils.hpp  validation.hpp
src/: bishop.cpp  board.cpp  chess.cpp  color.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  queen.cpp  rook.cpp  square.cpp  tracked_piece.cpp  validation.cpp
